# DNN_OpenCV_learning_repo

./: .gitignore  README.md  detection.py  social_distance_detector.py
Image_correction/: CMakeLists.txt  image_correction.cpp  text_correction.cpp  text_correction_FFT.cpp
Social_distancing_detector/imagesearch/: social_distancing_config.py
detectQRCode/: CMakeLists.txt  main.cpp
face detector/: detect_faces.py  detect_faces_video.py
face_mask_detector/: detect_mask_image.py  detect_mask_video.py  train_mask_detector.py
image_beautiful_filter/: filter.cpp
remove_photo_flaw/: CMakeLists.txt  blemish.cpp
sky_detector/: CMakeLists.txt  main_test.cpp
sky_detector/base/: class_register.h
sky_detector/file_processor/: file_system_processor.h
sky_detector/sky_detector/: imageSkyDetector.cpp  imageSkyDetector.h
social_distance_detector/: social_distance_detector.py
social_distance_detector/imagesearch/: detection.py  social_distancing_config.py
